force-app/main/default/objects/Education__c/fields/Degree_Name__c.field-meta.xml
<CustomField>
    <fullName>Degree_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Degree Name</label>
    <referenceTo>Degree_Name__c</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>