force-app/main/default/objects/Education__c/fields/Hidden_Degree_Name__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Degree_Name__c</fullName>
    <label>Hidden Degree Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>