force-app/main/default/objects/Education__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>